--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Space orbit</title>
+        <style>
+        * {
+    margin: 0;
+    padding: 0;
+
+}
+    </style>
 </head>
 
 <body style="text-align: center">
-    <canvas id="unity-canvas" style="height:600px;width:400px;background: #231F20"></canvas> 
+    <canvas id="unity-canvas" style="height:100vh;width:100vw;background: #231F20"></canvas> 
     <!-- width: 480px; height: 800px;  -->
     <script src="Build/webgl.loader.js"></script>
     <script>
